# remote-cpp

./: .gitignore  CMakeLists.txt  format.sh  parse.py
cmake/: rmteConfig.cmake.in
example/basic/client/: CMakeLists.txt  main.cpp
example/basic/server/: CMakeLists.txt  main.cpp
example/basic/shared/include/: server_interface.hpp
include/rmte/: call_struct.hpp  client.hpp  fct_holder.hpp  fct_info.hpp  fct_map.hpp  pack.hpp  remote_client.hpp  remote_server.hpp  server.hpp
